CDO NEWS
--------

Version 1.6.4 (26 June 2014):

   New features:
     * Option --history: Do not append to netCDF "history" global attribute
     * Option --netcdf_hdr_pad <nbr>: Pad netCDF output header with nbr bytes
   New operators:
     * sealevelpressure: sea level pressure
   Changed operators:
     * Filter: disable zero-padding
     * diff: print number of different values
     * Ymonstat: sorts output by month of year
   Fixed bugs:
     * Filter:
     * eof3d: set sum of weights to 1
     * eofcoeff: remove scaling with grib cell area weights
     * eofcoeff3d: remove scaling with grib cell area weights

Version 1.6.3 (18 February 2014):

   New features:
     * remapbil, remapbic, remapdis, remapnn: performance optimization for regular 2D source grids
     * gradsdes: added support for GRIB files >2GB
     * eca_csu: added number of csu periods with more than 5days per time period
     * eca_cfd: added number of cfd periods with more than 5days per time period
     * expr: select variables by name
   Changed operators:
     * gradsdes: added parameter map_version and removed specific operators gradsdes1 and gradsdes2
   Fixed bugs:
     * gradsdes: changed LCC to LCCR in PDEF definition [Bug #4344]
     * cat: "Segmentation fault" if the output file already exist [Bug #4291]
     * delete: parameter level does not work [Bug #4216]

Version 1.6.2 (12 November 2013):

   New features:
     * select: added support for key >timestep_of_year<
     * mastrfu: added missing value support
     * splitmon: added optional parameter to set the format string for the month
   Fixed bugs:
     * selyear: wrong result for negative years [Bug #3836]
     * eca_gsl: start date of growing season is wrong if the length of growing season is zero

Version 1.6.1 (27 June 2013):

   New features:
     * support of blanks in filenames and parameter
   Changed operators:
     * gradsdes: added support for netCDF files