@@ -748,7 +748,7 @@ static char *CompcHelp[] = {
 
 static char *SetpartabHelp[] = {
     "NAME",
-    "    setpartab, setpartabn - Set parameter table",
+    "    setpartabp, setpartabn - Set parameter table",
     "",
     "SYNOPSIS",
     "    <operator>,table  ifile ofile",
@@ -763,6 +763,8 @@ static char *SetpartabHelp[] = {
     "     Entry    & Type & Description      ",
     "     name            & WORD        & Name of the variable",
     "     out_name        & WORD        & New name of the variable",
+    "     param           & WORD        & Parameter identifier (GRIB1: code[.tabnum];  GRIB2: num[.cat[.dis]])",
+    "     out_param       & WORD        & New parameter identifier",
     "     type            & WORD        & Data type (real or double)",
     "     standard_name   & WORD        & As defined in the CF standard name table",
     "     long_name       & STRING      & Describing the variable",
@@ -776,16 +778,14 @@ static char *SetpartabHelp[] = {
     "     ok_min_mean_abs & FLOAT       & Minimum absolute mean",
     "     ok_max_mean_abs & FLOAT       & Maximum absolute mean",
     "     factor          & FLOAT       & Scale factor",
-    "     code            & INTEGER     & GRIB1 code number",
-    "     out_code        & INTEGER     & New GRIB1 code number",
     "     delete          & INTEGER     & Set to 1 to delete variable",
     "    ",
     "    The search key for the variable depends on the operator. Use setpartabn to search variables by the name.",
-    "    This is typically used for netCDF datasets. The operator setpartab searches variables by the code number.",
+    "    This is typically used for netCDF datasets. The operator setpartabp searches variables by the parameter ID.",
     "",
     "OPERATORS",
-    "    setpartab   Set parameter table",
-    "                Search variables by code number.",
+    "    setpartabp  Set parameter table",
+    "                Search variables by the parameter identifier.",
     "    setpartabn  Set parameter table",
     "                Search variables by name.",
     "",
