@@ -7,6 +7,8 @@ Version 1.6.4 (26 June 2014):
      * Option --history: Do not append to netCDF "history" global attribute
      * Option --netcdf_hdr_pad <nbr>: Pad netCDF output header with nbr bytes
    New operators:
+     * setpartabn: set parameter table by name
+     * setpartabp: set parameter table by parameter ID
      * sealevelpressure: sea level pressure
    Changed operators:
      * Filter: disable zero-padding
